ingress/samples/ingress/ingress-test-1.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test-1
  namespace: ingress-test-1
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: kubernetes.example.com
      http:
        paths:
          - path: /nginx(/|$)(.*)
            backend:
              serviceName: nginx-svc
              servicePort: 80
          - path: /blue(/|$)(.*)
            backend:
              serviceName: blue-svc
              servicePort: 80
