ingress/samples/ingress/ingress-test-2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-default-ns
  namespace: ingress-test-2
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: kubernetes.example.com
      http:
        paths:
          - path: /green(/|$)(.*)
            backend:
              serviceName: green-svc
              servicePort: 80
